# Projet6_data

./: .gitignore  README.md  bentofile.yaml  pyproject.toml  requirements.txt  save_model.py  service.py  template_modelistation_supervisee-Copy1.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  template_modelistation_supervisee-Copy1-checkpoint.ipynb  template_modelistation_supervisee-checkpoint.ipynb
