[project]
name = "donneep6_copie"
version = "0.1.0"
description = ""
authors = [
    {name = "Zakari Ka",email = "zakari_kaddour@live.fr"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bentoml (==1.4.3)",
    "scikit-learn (==1.6.1)",
    "pandas (==2.2.3)",
    "numpy (==2.1.3)",
    "pydantic (==2.10.3)",
    "joblib (==1.4.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
